<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">通信录</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_name">姓名</string>
    <string name="TV_telumber">电话号码</string>
    <string name="TV_Ring">手机铃声</string>
    <string name="bt_sendSMS">发送信息</string>
    <string name="TV_ShareList">分享名片</string>
    <string name="TV_addCollect">添加收藏</string>
    <string name="TV_editList">编辑</string>
    <string name="img_Diafun">切换通话记录视图</string>
    <string name="TV_MenuDialog">切换通话记录视图</string>
    <string name="call_history">通话</string>
    <string name="phoneMen">联系人</string>
    <string name="SMS_record">信息</string>
    <string name="tv_dial">拨号</string>
    <string name="tv_menu">菜单</string>
    <string name="tv_delete">删除</string>
    <string name="tv_search">搜索</string>
    <string name="tv_addmen">添加联系人</string>
    <string name="tv_searchmen">搜索联系人</string>
    <string name="et_searcSms">搜索信息</string>
    <string name="tv_newSms">新建信息</string>
    <string name="tv_curTime">8/29</string>
    <string name="tv_defNuber">18819460928</string>
    <string name="tv_defAdr">广东广州</string>
    <string name="tv_calldetail">通话详情</string>
    <string name="title_activity_add_men">添加联系人</string>
    <string name="men_name">姓名</string>
    <string name="men_number">电话号码:</string>
    <string name="men_adress">地 址:</string>
    <string name="men_email">电子邮箱:</string>
    <string name="men_birthday">生 日:</string>
    <string name="img_yes">确定</string>
    <string name="img_no">取消</string>
    <string name="title_activity_multi_del">MultiDelActivity</string>
    <string name="title_activity_sms_detail">SmsDetailActivity</string>
    <string name="title_activity_notify_sms">NotifySmsActivity</string>
    <string name="title_activity_new_sms">NewSMSActivity</string>
    <string name="title_activity_sms_men">SmsMenActivity</string>

</resources>
