<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   
    tools:context="com.liang.phonecontactlist.AddMenActivity" >

    <RelativeLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
      android:background="@color/color_blue_back"       
        >
        <ImageView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/no_img"
            android:padding="5dp"
            android:contentDescription="@string/img_no"
            android:clickable="true"
           android:onClick="cancle"
            />
         <ImageView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:src="@drawable/yes_img"
            android:contentDescription="@string/img_yes"
             android:clickable="true"
           android:onClick="saveMen"
            /> 
    </RelativeLayout>
    
    <com.liang.customUI.RoundImageView
        android:padding="5dp"
        android:id="@+id/img_headphoto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/headnew" />

    <EditText
        android:id="@+id/et_MenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/men_name" 
        android:textSize="12sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20sp"
        android:textSize="12sp" >

        <TextView 
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:hint="@string/men_number"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_numMen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/men_number"
            android:textSize="12sp" 
            android:numeric="integer"   
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20sp"
        android:textSize="12sp" >

        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:hint="@string/men_adress" 
            android:textSize="12sp"
            
            />

        <EditText
            android:id="@+id/et_adrMen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/men_adress"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20sp" 
        android:textSize="12sp">

        <TextView
            android:layout_width="55dp" 
            android:layout_height="wrap_content"
            android:hint="@string/men_email"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_mailMen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/men_email" 
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20sp" >

        <TextView
            android:layout_width="55dp" 
            android:layout_height="wrap_content"
            android:hint="@string/men_birthday" />

        <EditText
            android:id="@+id/et_birthMen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/men_birthday" 
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>