<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
      >
    
    <TextView 
        android:id="@+id/tv_callTime"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:gravity="center"       
        android:text="@string/tv_curTime"
        
         android:paddingLeft="5dp"
         android:paddingRight="8dp"
         android:textSize="10sp"
        
        />
     <ImageView 
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:background="@drawable/timeshift"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_calhis_number"
            style="@style/menlist_numberStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingTop="3dp"
             android:textColor="@color/color_blacktext"
            android:text="@string/tv_defNuber"
            android:textSize="15sp"
             />

        <TextView
            android:id="@+id/tv_calhis_numAdr"
            style="@style/menlist_mumberAtrr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:paddingTop="2dp"
            android:text="@string/tv_defAdr"
             android:textColor="@color/color_graytext"
             />
    </LinearLayout>
    
    <ImageView 
        android:id="@+id/img_menDetail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:src="@drawable/see_more"
        android:contentDescription="@string/tv_calldetail"
        android:paddingRight="15dp"
        android:paddingLeft="5dp"
      android:focusable="false"
        />
     
</LinearLayout>
